--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@ body {
 h1 {
   font-family: Helvetica, Arial;
 }
+body {
+  background-color: AliceBlue;
+  color: DarkSlateBlue;
+  font-family: Arial;
+}
