--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
 body {
   background-color: #CAE7DF;
 }
-
-h1 {
-  font-family: Helvetica, Arial;
-}
-body {
-  background-color: AliceBlue;
-  color: DarkSlateBlue;
-  font-family: Arial;
-}
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
