--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 body {
   background-color: #CAE7DF;
 }
+body {
+  color: DarkSlateBlue;
+  font-family: Arial;
+}
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&display=swap" rel="stylesheet">
