--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
 .about h2 {
   font-size: 24px;
 }
-body {
-  background-image: Url(C:\Users\User\OneDrive\Desktop\Foundations\FITC 130_Web Development and Coding\Code\Website\Images\subtle_stripes.png);
+.box {
+  background-image: url(Images/subtle_stripes_2X.png);
+  background-repeat: repeat;
 }
-* {
+{
   margin: 3;
   line-height:2 ;
   box-sizing: border-box;
@@ -49,12 +50,12 @@ p {
 body {
   color: black;
   font-family: Helvetica;
-  font-size: 16px;
+  font-size: 18px;
   margin: 50px;
 }
-h1, h2, h3 {
+h1, h2, h3 , h4 , h5 {
   font-weight: bold;
-  font-style: italic;
+  font-style: italic
 }
 p {
   line-height: 3;
@@ -85,5 +86,5 @@ a:hover {
 }
 
 .box p {
-  font-size: 24px;
+  font-size: 50px;
 }
